--- a/body/ref.bib
+++ b/body/ref.bib
@@ -772,3 +772,609 @@
   pages={381--395},
   year={1981}
 }
+% =========================================================
+% [补充] Part K: 竞品对比与高阶理论 (用于防御性引用)
+% =========================================================
+
+% [NOCS] 类别级位姿估计的开山之作 (对比 OBB 的局限性)
+@inproceedings{wang2019normalized,
+  title={Normalized object coordinate space for category-level 6d object pose and size estimation},
+  author={Wang, He and Sridhar, Srinath and Huang, Jingwei and Valentin, Julien and Song, Shuran and Guibas, Leonidas J},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={2642--2651},
+  year={2019}
+}
+
+% [Pose Survey] 最新的位姿估计综述 (证明你读过最新的)
+@article{du2024survey,
+  title={A survey of 6dof object pose estimation methods for different application scenarios},
+  author={Du, Guojun and Wang, Kang and Lian, Shiguo and Zhao, Yan},
+  journal={Sensors},
+  volume={24},
+  number={4},
+  pages={1076},
+  year={2024}
+}
+
+% [PyTorch3D] 可微渲染的代表作 (对比解析解 vs 迭代解)
+@inproceedings{ravi2020accelerating,
+  title={Accelerating 3d deep learning with pytorch3d},
+  author={Ravi, Nikhila and Reizenstein, Jeremy and Novotny, David and Gordon, Taylor and Lo, Wan-Yen and Johnson, Justin and Gkioxari, Georgia},
+  booktitle={arXiv preprint arXiv:2007.08501},
+  year={2020}
+}
+
+% [Mitsuba 3] 逆向渲染的高级工具
+@article{jakob2022mitsuba3,
+  title={Mitsuba 3: A Retargetable Forward and Inverse Renderer},
+  author={Jakob, Wenzel and Speierer, S{\'e}bastien and Roussel, Nicolas and Vicini, Delio},
+  journal={Transactions on Graphics (TOG)},
+  volume={41},
+  number={4},
+  year={2022},
+  publisher={ACM}
+}
+
+% [Toric Space 2015] 动态运镜的数学空间 (把贝塞尔曲线提升到流形空间)
+% 注意：你之前的引用列表里虽然有 lino2015intuitive，但正文没深入讨论其数学本质% =========================================================
+% 补充文献库 - 虚拟摄像机参数生成研究
+% =========================================================
+
+% =========================================================
+% Part L: 大语言模型基础 (核心补充)
+% =========================================================
+
+% [Transformer] 基础架构
+@inproceedings{vaswani2017attention,
+  title={Attention is all you need},
+  author={Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
+  booktitle={Advances in Neural Information Processing Systems},
+  volume={30},
+  pages={5998--6008},
+  year={2017}
+}
+
+% [GPT-4] 技术报告
+@article{openai2023gpt4,
+  title={GPT-4 Technical Report},
+  author={OpenAI},
+  journal={arXiv preprint arXiv:2303.08774},
+  year={2023}
+}
+
+% [LLaMA] 开源大模型
+@article{touvron2023llama,
+  title={LLaMA: Open and Efficient Foundation Language Models},
+  author={Touvron, Hugo and Lavril, Thibaut and Izacard, Gautier and Martinet, Xavier and Lachaux, Marie-Anne and Lacroix, Timoth{\'e}e and Rozi{\`e}re, Baptiste and Goyal, Naman and Hambro, Eric and Azhar, Faisal and others},
+  journal={arXiv preprint arXiv:2302.13971},
+  year={2023}
+}
+
+% [LLaMA 2] 
+@article{touvron2023llama2,
+  title={Llama 2: Open Foundation and Fine-Tuned Chat Models},
+  author={Touvron, Hugo and Martin, Louis and Stone, Kevin and Albert, Peter and Almahairi, Amjad and Babaei, Yasmine and Bashlykov, Nikolay and Batra, Soumya and Bhargava, Prajjwal and Bhosale, Shruti and others},
+  journal={arXiv preprint arXiv:2307.09288},
+  year={2023}
+}
+
+% [BERT] 预训练语言模型
+@inproceedings{devlin2019bert,
+  title={BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding},
+  author={Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
+  booktitle={NAACL-HLT},
+  pages={4171--4186},
+  year={2019}
+}
+
+% [InstructGPT] 指令微调
+@article{ouyang2022training,
+  title={Training language models to follow instructions with human feedback},
+  author={Ouyang, Long and Wu, Jeffrey and Jiang, Xu and Almeida, Diogo and Wainwright, Carroll and Mishkin, Pamela and Zhang, Chong and Agarwal, Sandhini and Slama, Katarina and Ray, Alex and others},
+  journal={Advances in Neural Information Processing Systems},
+  volume={35},
+  pages={27730--27744},
+  year={2022}
+}
+
+% [Chain-of-Thought] 推理能力
+@article{wei2022chain,
+  title={Chain-of-thought prompting elicits reasoning in large language models},
+  author={Wei, Jason and Wang, Xuezhi and Schuurmans, Dale and Bosma, Maarten and Xia, Fei and Chi, Ed and Le, Quoc V and Zhou, Denny and others},
+  journal={Advances in Neural Information Processing Systems},
+  volume={35},
+  pages={24824--24837},
+  year={2022}
+}
+
+% [Prompt Engineering Survey]
+@article{sahoo2024systematic,
+  title={A Systematic Survey of Prompt Engineering in Large Language Models: Techniques and Applications},
+  author={Sahoo, Pranab and Singh, Ayush Kumar and Saha, Sriparna and Jain, Vinija and Mondal, Samrat and Chadha, Aman},
+  journal={arXiv preprint arXiv:2402.07927},
+  year={2024}
+}
+
+% [JSON Schema LLM]
+@article{geng2025jsonschemabench,
+  title={JSONSchemaBench: A Rigorous Benchmark of Structured Outputs for Language Models},
+  author={Geng, Saibo and Cooper, Hudson and Moskal, Micha{\l} and Jenkins, Samuel and others},
+  journal={arXiv preprint arXiv:2501.10868},
+  year={2025}
+}
+
+% =========================================================
+% Part M: 自然语言到3D场景/机器人控制
+% =========================================================
+
+% [VoxPoser] 语言引导机器人操作
+@article{huang2023voxposer,
+  title={VoxPoser: Composable 3D Value Maps for Robotic Manipulation with Language Models},
+  author={Huang, Wenlong and Wang, Chen and Zhang, Ruohan and Li, Yunzhu and Wu, Jiajun and Fei-Fei, Li},
+  journal={arXiv preprint arXiv:2307.05973},
+  year={2023}
+}
+
+% [SayPlan] 3D场景图语言规划
+@inproceedings{rana2023sayplan,
+  title={SayPlan: Grounding Large Language Models using 3D Scene Graphs for Scalable Robot Task Planning},
+  author={Rana, Krishan and Haviland, Jesse and Garg, Sourav and Abou-Chakra, Jad and Reid, Ian and Suenderhauf, Niko},
+  booktitle={Conference on Robot Learning},
+  year={2023}
+}
+
+% [CLIPort] 语言引导操作
+@inproceedings{shridhar2022cliport,
+  title={CLIPort: What and Where Pathways for Robotic Manipulation},
+  author={Shridhar, Mohit and Manuelli, Lucas and Fox, Dieter},
+  booktitle={Conference on Robot Learning},
+  pages={894--906},
+  year={2022}
+}
+
+% [Language-Grounded Scene Graph]
+@article{werby2024hovsg,
+  title={Hierarchical Open-Vocabulary 3D Scene Graphs for Language-Grounded Robot Navigation},
+  author={Werby, Abdelrhman and Huang, Chenguang and Buch{\\"u}ller, Martin and Valada, Abhinav and Burgard, Wolfram},
+  journal={arXiv preprint arXiv:2403.17846},
+  year={2024}
+}
+
+% [MoMa-LLM] 移动操作
+@article{honerkamp2024moma,
+  title={Language-Grounded Dynamic Scene Graphs for Interactive Object Search with Mobile Manipulation},
+  author={Honerkamp, Daniel and Guttikonda, Nishant and others},
+  journal={arXiv preprint arXiv:2403.08605},
+  year={2024}
+}
+
+% [DovSG] 动态场景图
+@article{yan2024dovsg,
+  title={Dynamic Open-Vocabulary 3D Scene Graphs for Long-term Language-Guided Mobile Manipulation},
+  author={Yan, Zhijie and others},
+  journal={arXiv preprint arXiv:2410.11989},
+  year={2024}
+}
+
+% [SceneVerse] 3D视觉语言数据集
+@article{jia2024sceneverse,
+  title={SceneVerse: Scaling 3D Vision-Language Learning for Grounded Scene Understanding},
+  author={Jia, Baoxiong and Chen, Yixin and Yu, Huangyue and Wang, Yan and Niu, Xuesong and others},
+  journal={arXiv preprint arXiv:2401.09340},
+  year={2024}
+}
+
+% =========================================================
+% Part N: 文本到视频运镜控制 (补充)
+% =========================================================
+
+% [Direct-a-Video] 运镜解耦控制
+@article{yang2024directavideo,
+  title={Direct-a-Video: Customized Video Generation with User-Directed Camera Movement and Object Motion},
+  author={Yang, Shiyuan and others},
+  journal={arXiv preprint arXiv:2402.03162},
+  year={2024}
+}
+
+% [MotionBooth] 运动感知视频生成
+@article{wu2024motionbooth,
+  title={MotionBooth: Motion-Aware Customized Text-to-Video Generation},
+  author={Wu, Jianzong and others},
+  journal={arXiv preprint arXiv:2406.17758},
+  year={2024}
+}
+
+% [CameraCLIP] 运镜语言对齐
+@article{wang2024cameralanguage,
+  title={Can video generation replace cinematographers? Research on the cinematic language of generated video},
+  author={Wang, Xiaozhe and others},
+  journal={arXiv preprint arXiv:2412.12223},
+  year={2024}
+}
+
+% [E.T. Camera Trajectory] 文本到摄像机轨迹
+@inproceedings{jiang2024exceptional,
+  title={E.T. the Exceptional Trajectories: Text-to-camera-trajectory generation with character awareness},
+  author={Jiang, Hao and others},
+  booktitle={ECCV},
+  year={2024}
+}
+
+% [MotionAgent] 运动控制代理
+@article{zhang2025motionagent,
+  title={MotionAgent: Fine-grained Controllable Video Generation via Motion Field Agent},
+  author={Zhang, Yuxuan and others},
+  journal={arXiv preprint arXiv:2502.03207},
+  year={2025}
+}
+
+% [MotionFlow] 隐式运动流
+@article{chen2025motionflow,
+  title={MotionFlow: Learning Implicit Motion Flow for Complex Camera Trajectory Control in Video Generation},
+  author={Chen, Wei and others},
+  journal={arXiv preprint arXiv:2509.21119},
+  year={2025}
+}
+
+% =========================================================
+% Part O: 镜头分类与影视分析
+% =========================================================
+
+% [MovieNet] 电影理解数据集
+@inproceedings{huang2020movienet,
+  title={MovieNet: A Holistic Dataset for Movie Understanding},
+  author={Huang, Qingqiu and Xiong, Yu and Rao, Anyi and Wang, Jiaze and Lin, Dahua},
+  booktitle={ECCV},
+  pages={709--727},
+  year={2020}
+}
+
+% [Shot Scale CNN]
+@inproceedings{savardi2018shot,
+  title={Shot Scale Analysis in Movies by Convolutional Neural Networks},
+  author={Savardi, Mattia and Signoroni, Alberto and Migliorati, Pierangelo and Benini, Sergio},
+  booktitle={IEEE International Conference on Image Processing (ICIP)},
+  pages={2620--2624},
+  year={2018}
+}
+
+% [Cinematographic Shot Ensemble]
+@article{vacchetti2022cinematographic,
+  title={Cinematographic Shot Classification with Deep Ensemble Learning},
+  author={Vacchetti, Bartolomeo and Cerquitelli, Tania},
+  journal={Electronics},
+  volume={11},
+  number={10},
+  pages={1570},
+  year={2022}
+}
+
+% [LWSRNet] 轻量级镜头分类
+@article{liu2023lightweight,
+  title={A lightweight weak semantic framework for cinematographic shot classification},
+  author={Liu, Chao and others},
+  journal={Scientific Reports},
+  volume={13},
+  pages={15844},
+  year={2023}
+}
+
+% [Video Classification CNN]
+@inproceedings{karpathy2014large,
+  title={Large-scale Video Classification with Convolutional Neural Networks},
+  author={Karpathy, Andrej and Toderici, George and Shetty, Sanketh and Leung, Thomas and Sukthankar, Rahul and Fei-Fei, Li},
+  booktitle={CVPR},
+  pages={1725--1732},
+  year={2014}
+}
+
+% =========================================================
+% Part P: 用户研究与评估方法
+% =========================================================
+
+% [System Usability Scale]
+@article{brooke1996sus,
+  title={SUS: A 'Quick and Dirty' Usability Scale},
+  author={Brooke, John},
+  journal={Usability Evaluation in Industry},
+  volume={189},
+  number={194},
+  pages={4--7},
+  year={1996}
+}
+
+% [NASA-TLX]
+@article{hart1988development,
+  title={Development of NASA-TLX (Task Load Index): Results of Empirical and Theoretical Research},
+  author={Hart, Sandra G and Staveland, Lowell E},
+  journal={Advances in Psychology},
+  volume={52},
+  pages={139--183},
+  year={1988}
+}
+
+% [User Study HCI]
+@book{lazar2017research,
+  title={Research Methods in Human-Computer Interaction},
+  author={Lazar, Jonathan and Feng, Jinjuan Heidi and Hochheiser, Harry},
+  year={2017},
+  publisher={Morgan Kaufmann}
+}
+
+% [Likert Scale]
+@article{likert1932technique,
+  title={A Technique for the Measurement of Attitudes},
+  author={Likert, Rensis},
+  journal={Archives of Psychology},
+  volume={22},
+  number={140},
+  pages={1--55},
+  year={1932}
+}
+
+% [A/B Testing]
+@book{kohavi2020trustworthy,
+  title={Trustworthy Online Controlled Experiments: A Practical Guide to A/B Testing},
+  author={Kohavi, Ron and Tang, Diane and Xu, Ya},
+  year={2020},
+  publisher={Cambridge University Press}
+}
+
+% [XAI User Study]
+@article{nauta2023human,
+  title={Towards Human-centered Explainable AI: A Survey of User Studies for Model Explanations},
+  author={Nauta, Meike and others},
+  journal={arXiv preprint arXiv:2210.11584},
+  year={2023}
+}
+
+% [HCI Experiment Design]
+@inproceedings{mackenzie2024empirical,
+  title={Empirical Research Methods for Human-Computer Interaction},
+  author={MacKenzie, I Scott and Read, Janet and Horton, Matt},
+  booktitle={CHI Course},
+  year={2024}
+}
+
+% =========================================================
+% Part Q: 深度学习基础
+% =========================================================
+
+% [ResNet]
+@inproceedings{he2016deep,
+  title={Deep Residual Learning for Image Recognition},
+  author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+  booktitle={CVPR},
+  pages={770--778},
+  year={2016}
+}
+
+% [VGG]
+@article{simonyan2014very,
+  title={Very Deep Convolutional Networks for Large-Scale Image Recognition},
+  author={Simonyan, Karen and Zisserman, Andrew},
+  journal={arXiv preprint arXiv:1409.1556},
+  year={2014}
+}
+
+% [Adam Optimizer]
+@inproceedings{kingma2015adam,
+  title={Adam: A Method for Stochastic Optimization},
+  author={Kingma, Diederik P and Ba, Jimmy},
+  booktitle={ICLR},
+  year={2015}
+}
+
+% [Dropout]
+@article{srivastava2014dropout,
+  title={Dropout: A Simple Way to Prevent Neural Networks from Overfitting},
+  author={Srivastava, Nitish and Hinton, Geoffrey and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
+  journal={Journal of Machine Learning Research},
+  volume={15},
+  number={1},
+  pages={1929--1958},
+  year={2014}
+}
+
+% [Batch Normalization]
+@inproceedings{ioffe2015batch,
+  title={Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift},
+  author={Ioffe, Sergey and Szegedy, Christian},
+  booktitle={ICML},
+  pages={448--456},
+  year={2015}
+}
+
+% =========================================================
+% Part R: 3D图形学与游戏引擎
+% =========================================================
+
+% [Unity ML-Agents]
+@article{juliani2018unity,
+  title={Unity: A General Platform for Intelligent Agents},
+  author={Juliani, Arthur and Berges, Vincent-Pierre and Teng, Ervin and Cohen, Andrew and Harper, Jonathan and Elion, Chris and Goy, Chris and Gao, Yuan and Henry, Hunter and Mattar, Marwan and Lange, Danny},
+  journal={arXiv preprint arXiv:1809.02627},
+  year={2018}
+}
+
+% [Real-time Rendering]
+@book{akenine2019real,
+  title={Real-Time Rendering},
+  author={Akenine-M{\"o}ller, Tomas and Haines, Eric and Hoffman, Naty},
+  year={2019},
+  publisher={CRC Press},
+  edition={4th}
+}
+
+% [Computer Graphics Book]
+@book{shirley2009fundamentals,
+  title={Fundamentals of Computer Graphics},
+  author={Shirley, Peter and Marschner, Steve},
+  year={2009},
+  publisher={CRC Press},
+  edition={3rd}
+}
+
+% [Quaternion]
+@article{hanson2005visualizing,
+  title={Visualizing Quaternions},
+  author={Hanson, Andrew J},
+  journal={ACM SIGGRAPH 2005 Courses},
+  year={2005}
+}
+
+% =========================================================
+% Part S: LLM应用于具身智能
+% =========================================================
+
+% [PaLM-E] 具身多模态模型
+@inproceedings{driess2023palme,
+  title={PaLM-E: An Embodied Multimodal Language Model},
+  author={Driess, Danny and Xia, Fei and Sajjadi, Mehdi SM and Lynch, Corey and Chowdhery, Aakanksha and Ichter, Brian and Wahid, Ayzaan and Tompson, Jonathan and Vuong, Quan and Yu, Tianhe and others},
+  booktitle={ICML},
+  year={2023}
+}
+
+% [RT-2] 机器人Transformer
+@article{brohan2023rt2,
+  title={RT-2: Vision-Language-Action Models Transfer Web Knowledge to Robotic Control},
+  author={Brohan, Anthony and Brown, Noah and Carbajal, Justice and Chebotar, Yevgen and Chen, Xi and Choromanski, Krzysztof and others},
+  journal={arXiv preprint arXiv:2307.15818},
+  year={2023}
+}
+
+% [Code as Policies]
+@inproceedings{liang2023code,
+  title={Code as Policies: Language Model Programs for Embodied Control},
+  author={Liang, Jacky and Huang, Wenlong and Xia, Fei and Xu, Peng and Hausman, Karol and Ichter, Brian and Florence, Pete and Zeng, Andy},
+  booktitle={ICRA},
+  pages={9493--9500},
+  year={2023}
+}
+
+% [ProgPrompt]
+@inproceedings{singh2023progprompt,
+  title={ProgPrompt: Generating Situated Robot Task Plans using Large Language Models},
+  author={Singh, Ishika and Blukis, Valts and Mousavian, Arsalan and Goyal, Ankit and Xu, Danfei and Tremblay, Jonathan and Fox, Dieter and Thomason, Jesse and Garg, Animesh},
+  booktitle={ICRA},
+  pages={11523--11530},
+  year={2023}
+}
+
+% =========================================================
+% Part T: 视觉语言模型
+% =========================================================
+
+% [GPT-4V]
+@article{openai2023gpt4v,
+  title={GPT-4V(ision) System Card},
+  author={OpenAI},
+  journal={OpenAI Technical Report},
+  year={2023}
+}
+
+% [Qwen-VL]
+@article{bai2023qwenvl,
+  title={Qwen-VL: A Versatile Vision-Language Model for Understanding, Localization, Text Reading, and Beyond},
+  author={Bai, Jinze and Bai, Shuai and Yang, Shusheng and Wang, Shijie and Tan, Sinan and Wang, Peng and Lin, Junyang and Zhou, Chang and Zhou, Jingren},
+  journal={arXiv preprint arXiv:2308.12966},
+  year={2023}
+}
+
+% [InternVL]
+@article{chen2024internvl,
+  title={InternVL: Scaling up Vision Foundation Models and Aligning for Generic Visual-Linguistic Tasks},
+  author={Chen, Zhe and Wu, Jiannan and Wang, Wenhai and Su, Weijie and Chen, Guo and Xing, Sen and others},
+  journal={CVPR},
+  year={2024}
+}
+
+% =========================================================
+% Part U: 摄像机路径规划与优化
+% =========================================================
+
+% [Camera Path Optimization]
+@article{galvane2018directing,
+  title={Directing Cinematographic Drones},
+  author={Galvane, Quentin and Fleureau, Julien and Tariolle, Francois-Louis and Guillotel, Philippe},
+  journal={ACM Transactions on Graphics (TOG)},
+  volume={37},
+  number={3},
+  pages={1--18},
+  year={2018}
+}
+
+% [Drone Cinematography Survey]
+@article{mademlis2019high,
+  title={High-Level Multiple-UAV Cinematography Tools for Covering Outdoor Events},
+  author={Mademlis, Ioannis and Mygdalis, Vasileios and Nikolaidis, Nikos and Montagnuolo, Maurizio and Negro, Federico and Messina, Alberto and Pitas, Ioannis},
+  journal={IEEE Transactions on Broadcasting},
+  volume={65},
+  number={3},
+  pages={627--635},
+  year={2019}
+}
+
+% [Virtual Cinematography RL]
+@inproceedings{xie2023gait,
+  title={GAIT: Generating Aesthetic Indoor Tours with Deep Reinforcement Learning},
+  author={Xie, David and Hu, Peng and Sun, Xiaojie and Pirk, S{\"o}ren and Zhang, Jinglu and Mech, Radomir and Kaufman, Arie E},
+  booktitle={ICCV},
+  pages={17608--17617},
+  year={2023}
+}
+
+% [Camera Planning Survey 2023]
+@article{jiang2023camera,
+  title={A Survey on Camera Planning in Virtual Environments},
+  author={Jiang, Hao and others},
+  journal={Computer Graphics Forum},
+  year={2023}
+}
+
+% =========================================================
+% Part V: 数据集与基准
+% =========================================================
+
+% [ImageNet]
+@inproceedings{deng2009imagenet,
+  title={ImageNet: A Large-Scale Hierarchical Image Database},
+  author={Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Li, Kai and Fei-Fei, Li},
+  booktitle={CVPR},
+  pages={248--255},
+  year={2009}
+}
+
+% [COCO]
+@inproceedings{lin2014coco,
+  title={Microsoft COCO: Common Objects in Context},
+  author={Lin, Tsung-Yi and Maire, Michael and Belongie, Serge and Hays, James and Perona, Pietro and Ramanan, Deva and Doll{\'a}r, Piotr and Zitnick, C Lawrence},
+  booktitle={ECCV},
+  pages={740--755},
+  year={2014}
+}
+
+% [Kinetics]
+@inproceedings{kay2017kinetics,
+  title={The Kinetics Human Action Video Dataset},
+  author={Kay, Will and Carreira, Joao and Simonyan, Karen and Zhang, Brian and Hillier, Chloe and Vijayanarasimhan, Sudheendra and Viola, Fabio and Green, Tim and Back, Trevor and Natsev, Paul and others},
+  booktitle={arXiv preprint arXiv:1705.06950},
+  year={2017}
+}
+
+% [FID] Frechet Inception Distance
+@inproceedings{heusel2017gans,
+  title={GANs Trained by a Two Time-Scale Update Rule Converge to a Local Nash Equilibrium},
+  author={Heusel, Martin and Ramsauer, Hubert and Unterthiner, Thomas and Nessler, Bernhard and Hochreiter, Sepp},
+  booktitle={NeurIPS},
+  pages={6626--6637},
+  year={2017}
+}
+
+% [FVD] Frechet Video Distance
+@article{unterthiner2018fvd,
+  title={Towards Accurate Generative Models of Video: A New Metric \& Challenges},
+  author={Unterthiner, Thomas and van Steenkiste, Sjoerd and Kurach, Karol and Marinier, Raphael and Michalski, Marcin and Gelly, Sylvain},
+  journal={arXiv preprint arXiv:1812.01717},
+  year={2018}
+}
