--- a/zjuthesis.tex
+++ b/zjuthesis.tex
@@ -6,7 +6,7 @@
     % Thesis Info
     StudentName     = 陈荣,
     StudentID       = 22321105,
-    AdvisorName     = 郑文庭,
+    AdvisorName     = 郑文庭副教授,
     Grade           = 2023,            % only the year, no '级'
     Major           = 计算机科学与技术,
     Department      = 计算机科学与技术学院,
